// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Asset /> should pass props on root element 1`] = `
<figure
  class="Asset test-class"
  data-testid="asset-id"
  id="test-id"
>
  <img
    alt="analysis"
    class="Asset__image"
    src="http://localhost/assets/symbols/analysis.svg"
  />
</figure>
`;

exports[`<Asset /> should render an asset 1`] = `
<figure
  class="Asset"
>
  <img
    alt="analysis"
    class="Asset__image"
    src="http://localhost/assets/symbols/analysis.svg"
  />
</figure>
`;
